# DS_CW

./: .gitignore  README.md  pyproject.toml
src/Distributed_Primality/: __init__.py  client.py  coordinator.py  filesystem.py  node.py
src/your_project_name/: __init__.py
