[project]
name = "distributed_primality"
version = "0.1.0"
description = "A distributed system for primality testing."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "kailen", email = "khargenr@caltech.edu"}]

dependencies = [
    "numpy",
    "grpcio",
    "primality",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["template*"]
